--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<header>
+		<div class="main-img">
+			<h2 class="main-text">サービス紹介</h2>
+		</div>
+	</header>
+
+	<main>
+		<div class="main-content">
+			<img src="img/wc-logo.png">
+			<p>マンツーマンサポートによる学習で、<br>
+			確実にwebスキルを習得できるプログラミングスクールです。</p>
+			<a href="mailto:joe@example.com?subject=feedback">webサイト</a>
+		</div>
+		<div class="main-content">
+			<img src="img/wcp-logo.png">
+			<p>未経験から転職を保証する<br>
+			日本で唯一のプログラミングスクールです。</p>
+			<a href="mailto:joe@example.com?subject=feedback">webサイト</a>
+		</div>
+		<div class="main-content">
+			<img src="img/wcw-logo.png">
+			<p>家庭も仕事も頑張りたい主婦、ママ向けの、<br>
+			１ヶ月でWebサイトを制作するwebデザインスクールです。</p>
+			<a href="mailto:joe@example.com?subject=feedback">webサイト</a>
+		</div>
+		<div class="main-content">
+			<img src="img/wcc-logo.png">
+			<p>3000名のエンジニアをサポートしてきたエージェントが<br>
+			あなたの転職をサポート。</p>
+			<a href="mailto:joe@example.com?subject=feedback">webサイト</a>
+		</div>
+	</main>
+
 </body>
 </html>
